--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,5 +20,6 @@
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.spec.ts", "src/test/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
