feat: 添加定时自动备份功能
- 新增后端备份服务，支持定时自动备份账户数据
- 支持 JSON/CSV/Excel 多种备份格式
- 可配置备份间隔、保留份数等参数
- 新增备份管理 API（列表、立即备份、下载、删除）
- 前端设置页面新增备份管理界面
- 支持手动触发备份和管理备份文件

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ SECRET_KEY=your-secure-secret-key-change-in-production
 
 # Port to expose the application
 PORT=8090
+
+# Auto Backup Settings
+AUTO_BACKUP_ENABLED=true
+AUTO_BACKUP_INTERVAL_HOURS=24
+AUTO_BACKUP_KEEP_COUNT=7
+AUTO_BACKUP_FORMAT=json
