fix: 修复设置密钥后不跳转及数据持久化问题
- 修复 setup 完成后 isInitialized 状态未更新导致页面不跳转
- docker-compose 添加 env_file 确保环境变量正确加载
- .env.example 添加 SECRET_KEY 重要警告说明

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # Account Management System - Environment Configuration
+#
+# IMPORTANT: 首次部署后请勿修改 SECRET_KEY，否则会导致数据无法解密！
+# IMPORTANT: Do NOT change SECRET_KEY after first deployment, or data will be lost!
 
 # Security - IMPORTANT: Change this in production!
+# 首次部署时会自动生成，请妥善保存
 SECRET_KEY=your-secure-secret-key-change-in-production
 
 # Port to expose the application
