--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: Dockerfile
     container_name: account-manager-backend
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
       - SECRET_KEY=${SECRET_KEY:-your-secure-secret-key-change-in-production}
     volumes:
@@ -36,6 +38,3 @@ services:
 networks:
   app-network:
     driver: bridge
-
-volumes:
-  app-data:
