fix: 修复Docker数据卷挂载路径导致重启后数据丢失的问题
- 将卷挂载从 ./data:/app/data 改为 ./data:/data
- 原因：容器内 BASE_DIR 解析为 /，DATA_DIR 为 /data
- 修复后重启容器不再丢失已设置的主密码和账户数据

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       - SECRET_KEY=${SECRET_KEY:-your-secure-secret-key-change-in-production}
     volumes:
-      - ./data:/app/data
+      - ./data:/data
     networks:
       - app-network
     healthcheck:
